Added code to save the graph along with the weights

--- a/Simple Policy Gradient.ipynb
+++ b/Simple Policy Gradient.ipynb
@@ -83,6 +83,8 @@
         "# Import required modules\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
+        "from tensorflow.python.framework import graph_util\n",
+        "from tensorflow.python.platform import gfile\n",
         "import gym\n",
         "from gym.spaces import Discrete, Box\n",
         "import matplotlib.pyplot as plt\n",
@@ -112,7 +114,7 @@
       "metadata": {
         "id": "l01SIfVNOO3c",
         "colab_type": "code",
-        "outputId": "5b1e71f1-d91e-47b2-d60d-2ad7f1aedbd6",
+        "outputId": "dcabfc23-7212-4ee2-b67b-c0e2ff507bc8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -123,7 +125,7 @@
         "# Create the env\n",
         "env = gym.make('CartPole-v0')"
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +141,7 @@
       "metadata": {
         "id": "zh-CKSfDOUYC",
         "colab_type": "code",
-        "outputId": "a84748a6-06eb-43c3-fda8-1cccfa2165e3",
+        "outputId": "84b53da7-2d91-4f04-9974-80cc7fde7356",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -154,7 +156,7 @@
         "print ('Action Space Size: {}'.format(act_size),\n",
         "       '\\nObservation Space Size: {}'.format(obs_size))"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +203,7 @@
         "logits = tf.layers.dense(a1, units=hneurons[1], activation=None)\n",
         "\n",
         "# Select the action\n",
-        "actions = tf.squeeze(tf.multinomial(logits=logits, num_samples=1), axis=1)\n",
+        "actions = tf.squeeze(tf.multinomial(logits=logits, num_samples=1), axis=1, name='output')\n",
         "\n",
         "# Loss function whose gradient is the policy gradient\n",
         "weights_ph = tf.placeholder(shape=(None,), dtype=tf.float32)\n",
@@ -224,9 +226,9 @@
       },
       "cell_type": "code",
       "source": [
+        "saver = tf.train.Saver()\n",
         "sess = tf.Session()\n",
-        "sess.run(tf.global_variables_initializer())\n",
-        "saver = tf.train.Saver()"
+        "sess.run(tf.global_variables_initializer())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -335,8 +337,27 @@
         "# Training Loop Parameters\n",
         "ckpt_interval = 5\n",
         "save_path = './ckpt_path/'\n",
-        "restore = True\n",
-        "ckpt_num = 15"
+        "restore = False\n",
+        "ckpt_num = 45"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ANJA4dsntcOb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Saving the weights along with the graph\n",
+        "def save_graph(sess, graph, graph_name):\n",
+        "    output_graph_def = graph_util.convert_variables_to_constants(\n",
+        "                        sess, graph.as_graph_def(), ['output'])\n",
+        "    with gfile.FastGFile(graph_name, 'wb') as f:\n",
+        "        f.write(output_graph_def.SerializeToString())\n",
+        "    return"
       ],
       "execution_count": 0,
       "outputs": []
@@ -345,10 +366,10 @@
       "metadata": {
         "id": "wGMf9JlpMNyZ",
         "colab_type": "code",
-        "outputId": "c12ba8d0-029a-4aa2-ab90-0ba7562c6026",
+        "outputId": "df0df6f5-896e-45cd-bd06-662b934d775e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1615
+          "height": 1649
         }
       },
       "cell_type": "code",
@@ -369,105 +390,110 @@
         "        curr_save_path = saver.save(sess, save_path + 'spg_ckpt{}.ckpt'.format(epoch+1))\n",
         "        print ('[INFO]Session saved Successfully!!')\n",
         "        print ('[INFO]Checkpoint saved at: {}'.format(curr_save_path))\n",
-        "        print ('*************************************************')"
+        "        print ('*************************************************')\n",
+        "\n",
+        "        \n",
+        "sess.close()"
       ],
       "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "INFO:tensorflow:Restoring parameters from ./ckpt_path/spg_ckpt15.ckpt\n",
-            "[INFO]Model Restored!!\n",
-            "Epoch: 1.000 Loss: 94.900 Return: 185.852 ep_len: 185.852\n",
-            "Epoch: 2.000 Loss: 95.248 Return: 189.778 ep_len: 189.778\n",
-            "Epoch: 3.000 Loss: 93.399 Return: 184.107 ep_len: 184.107\n",
-            "Epoch: 4.000 Loss: 94.960 Return: 188.259 ep_len: 188.259\n",
-            "Epoch: 5.000 Loss: 90.891 Return: 179.000 ep_len: 179.000\n",
+            "Epoch: 1.000 Loss: 30.518 Return: 34.384 ep_len: 34.384\n",
+            "Epoch: 2.000 Loss: 35.005 Return: 39.786 ep_len: 39.786\n",
+            "Epoch: 3.000 Loss: 33.453 Return: 41.372 ep_len: 41.372\n",
+            "Epoch: 4.000 Loss: 36.811 Return: 47.047 ep_len: 47.047\n",
+            "Epoch: 5.000 Loss: 36.649 Return: 47.255 ep_len: 47.255\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt5.ckpt\n",
             "*************************************************\n",
-            "Epoch: 6.000 Loss: 92.226 Return: 185.481 ep_len: 185.481\n",
-            "Epoch: 7.000 Loss: 88.927 Return: 177.345 ep_len: 177.345\n",
-            "Epoch: 8.000 Loss: 89.039 Return: 183.607 ep_len: 183.607\n",
-            "Epoch: 9.000 Loss: 84.313 Return: 170.533 ep_len: 170.533\n",
-            "Epoch: 10.000 Loss: 82.875 Return: 170.233 ep_len: 170.233\n",
+            "Epoch: 6.000 Loss: 35.193 Return: 49.634 ep_len: 49.634\n",
+            "Epoch: 7.000 Loss: 41.239 Return: 57.159 ep_len: 57.159\n",
+            "Epoch: 8.000 Loss: 41.997 Return: 58.805 ep_len: 58.805\n",
+            "Epoch: 9.000 Loss: 40.687 Return: 60.554 ep_len: 60.554\n",
+            "Epoch: 10.000 Loss: 46.847 Return: 65.013 ep_len: 65.013\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt10.ckpt\n",
             "*************************************************\n",
-            "Epoch: 11.000 Loss: 79.048 Return: 165.387 ep_len: 165.387\n",
-            "Epoch: 12.000 Loss: 80.159 Return: 169.667 ep_len: 169.667\n",
-            "Epoch: 13.000 Loss: 78.457 Return: 164.355 ep_len: 164.355\n",
-            "Epoch: 14.000 Loss: 79.690 Return: 173.483 ep_len: 173.483\n",
-            "Epoch: 15.000 Loss: 78.927 Return: 170.100 ep_len: 170.100\n",
+            "Epoch: 11.000 Loss: 45.727 Return: 67.373 ep_len: 67.373\n",
+            "Epoch: 12.000 Loss: 46.163 Return: 68.176 ep_len: 68.176\n",
+            "Epoch: 13.000 Loss: 46.644 Return: 70.986 ep_len: 70.986\n",
+            "Epoch: 14.000 Loss: 48.347 Return: 72.971 ep_len: 72.971\n",
+            "Epoch: 15.000 Loss: 44.916 Return: 70.859 ep_len: 70.859\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt15.ckpt\n",
             "*************************************************\n",
-            "Epoch: 16.000 Loss: 76.956 Return: 169.100 ep_len: 169.100\n",
-            "Epoch: 17.000 Loss: 77.104 Return: 168.533 ep_len: 168.533\n",
-            "Epoch: 18.000 Loss: 74.537 Return: 163.677 ep_len: 163.677\n",
-            "Epoch: 19.000 Loss: 75.099 Return: 170.567 ep_len: 170.567\n",
-            "Epoch: 20.000 Loss: 73.042 Return: 164.452 ep_len: 164.452\n",
+            "Epoch: 16.000 Loss: 49.606 Return: 78.625 ep_len: 78.625\n",
+            "Epoch: 17.000 Loss: 52.622 Return: 83.295 ep_len: 83.295\n",
+            "Epoch: 18.000 Loss: 54.513 Return: 86.655 ep_len: 86.655\n",
+            "Epoch: 19.000 Loss: 63.635 Return: 98.667 ep_len: 98.667\n",
+            "Epoch: 20.000 Loss: 61.952 Return: 96.673 ep_len: 96.673\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt20.ckpt\n",
             "*************************************************\n",
-            "Epoch: 21.000 Loss: 74.969 Return: 172.200 ep_len: 172.200\n",
-            "Epoch: 22.000 Loss: 69.107 Return: 158.562 ep_len: 158.562\n",
-            "Epoch: 23.000 Loss: 71.353 Return: 162.935 ep_len: 162.935\n",
-            "Epoch: 24.000 Loss: 68.825 Return: 160.094 ep_len: 160.094\n",
-            "Epoch: 25.000 Loss: 71.799 Return: 167.067 ep_len: 167.067\n",
+            "Epoch: 21.000 Loss: 66.223 Return: 105.184 ep_len: 105.184\n",
+            "Epoch: 22.000 Loss: 74.331 Return: 116.605 ep_len: 116.605\n",
+            "Epoch: 23.000 Loss: 92.553 Return: 154.000 ep_len: 154.000\n",
+            "Epoch: 24.000 Loss: 98.307 Return: 166.677 ep_len: 166.677\n",
+            "Epoch: 25.000 Loss: 100.738 Return: 173.267 ep_len: 173.267\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt25.ckpt\n",
             "*************************************************\n",
-            "Epoch: 26.000 Loss: 74.101 Return: 172.567 ep_len: 172.567\n",
-            "Epoch: 27.000 Loss: 74.920 Return: 174.138 ep_len: 174.138\n",
-            "Epoch: 28.000 Loss: 72.890 Return: 171.367 ep_len: 171.367\n",
-            "Epoch: 29.000 Loss: 75.761 Return: 175.759 ep_len: 175.759\n",
-            "Epoch: 30.000 Loss: 72.667 Return: 177.034 ep_len: 177.034\n",
+            "Epoch: 26.000 Loss: 100.692 Return: 175.103 ep_len: 175.103\n",
+            "Epoch: 27.000 Loss: 101.487 Return: 175.517 ep_len: 175.517\n",
+            "Epoch: 28.000 Loss: 98.295 Return: 170.533 ep_len: 170.533\n",
+            "Epoch: 29.000 Loss: 103.051 Return: 181.964 ep_len: 181.964\n",
+            "Epoch: 30.000 Loss: 97.104 Return: 167.233 ep_len: 167.233\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt30.ckpt\n",
             "*************************************************\n",
-            "Epoch: 31.000 Loss: 79.209 Return: 185.071 ep_len: 185.071\n",
-            "Epoch: 32.000 Loss: 79.253 Return: 187.185 ep_len: 187.185\n",
-            "Epoch: 33.000 Loss: 78.923 Return: 191.444 ep_len: 191.444\n",
-            "Epoch: 34.000 Loss: 78.204 Return: 189.333 ep_len: 189.333\n",
-            "Epoch: 35.000 Loss: 79.983 Return: 192.444 ep_len: 192.444\n",
+            "Epoch: 31.000 Loss: 103.503 Return: 183.893 ep_len: 183.893\n",
+            "Epoch: 32.000 Loss: 96.744 Return: 167.967 ep_len: 167.967\n",
+            "Epoch: 33.000 Loss: 101.932 Return: 179.786 ep_len: 179.786\n",
+            "Epoch: 34.000 Loss: 105.094 Return: 187.037 ep_len: 187.037\n",
+            "Epoch: 35.000 Loss: 104.658 Return: 189.407 ep_len: 189.407\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt35.ckpt\n",
             "*************************************************\n",
-            "Epoch: 36.000 Loss: 82.217 Return: 193.692 ep_len: 193.692\n",
-            "Epoch: 37.000 Loss: 82.714 Return: 199.615 ep_len: 199.615\n",
-            "Epoch: 38.000 Loss: 83.894 Return: 198.654 ep_len: 198.654\n",
-            "Epoch: 39.000 Loss: 87.199 Return: 199.385 ep_len: 199.385\n",
-            "Epoch: 40.000 Loss: 84.367 Return: 199.538 ep_len: 199.538\n",
+            "Epoch: 36.000 Loss: 107.406 Return: 190.296 ep_len: 190.296\n",
+            "Epoch: 37.000 Loss: 108.210 Return: 194.000 ep_len: 194.000\n",
+            "Epoch: 38.000 Loss: 110.185 Return: 199.538 ep_len: 199.538\n",
+            "Epoch: 39.000 Loss: 110.261 Return: 198.269 ep_len: 198.269\n",
+            "Epoch: 40.000 Loss: 110.595 Return: 200.000 ep_len: 200.000\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt40.ckpt\n",
             "*************************************************\n",
-            "Epoch: 41.000 Loss: 85.091 Return: 199.538 ep_len: 199.538\n",
-            "Epoch: 42.000 Loss: 87.190 Return: 199.808 ep_len: 199.808\n",
-            "Epoch: 43.000 Loss: 87.480 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 44.000 Loss: 88.377 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 45.000 Loss: 89.082 Return: 199.192 ep_len: 199.192\n",
+            "Epoch: 41.000 Loss: 106.542 Return: 187.370 ep_len: 187.370\n",
+            "Epoch: 42.000 Loss: 109.269 Return: 195.000 ep_len: 195.000\n",
+            "Epoch: 43.000 Loss: 107.654 Return: 195.577 ep_len: 195.577\n",
+            "Epoch: 44.000 Loss: 109.251 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 45.000 Loss: 107.230 Return: 192.923 ep_len: 192.923\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt45.ckpt\n",
             "*************************************************\n",
-            "Epoch: 46.000 Loss: 89.767 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 47.000 Loss: 90.286 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 48.000 Loss: 92.028 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 49.000 Loss: 91.099 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 50.000 Loss: 91.074 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 46.000 Loss: 109.959 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 47.000 Loss: 108.971 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 48.000 Loss: 106.956 Return: 193.154 ep_len: 193.154\n",
+            "Epoch: 49.000 Loss: 109.049 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 50.000 Loss: 109.093 Return: 197.731 ep_len: 197.731\n",
             "[INFO]Saving Checkpoint...\n",
             "[INFO]Session saved Successfully!!\n",
             "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt50.ckpt\n",
-            "*************************************************\n"
+            "*************************************************\n",
+            "[INFO]Saving the graph and weights...\n",
+            "INFO:tensorflow:Froze 4 variables.\n",
+            "INFO:tensorflow:Converted 4 variables to const ops.\n",
+            "[INFO]Saved Successfully!!\n"
           ],
           "name": "stdout"
         }
@@ -481,7 +507,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "697a11ab-dcf6-40a5-fca9-aa37000f02a7"
+        "outputId": "14a72db6-6be2-48be-8665-b33e8cd787cf"
       },
       "cell_type": "code",
       "source": [
@@ -491,9 +517,9 @@
         "    files.download('./ckpt_path/spg_ckpt{}.ckpt.{}'.format(dwnld_ckpt, file_ending))\n",
         "    print ('[INFO]Download popup for ckpt file with .{} ending sent successfully!!'\n",
         "           .format(file_ending))\n",
-        "print ('All download notifications for the ckpt {} file sent successfully!!'.format(dwnld_ckpt))"
+        "print ('[INFO]All download notifications for the ckpt {} file sent successfully!!'.format(dwnld_ckpt))"
       ],
-      "execution_count": 23,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,6 +528,103 @@
             "[INFO]Download popup for ckpt file with .index ending sent successfully!!\n",
             "[INFO]Download popup for ckpt file with .data-00000-of-00001 ending sent successfully!!\n",
             "All download notifications for the ckpt 50 file sent successfully!!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "A4eqbDB0MUBk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# save the weights and graph\n",
+        "if True:\n",
+        "    print ('[INFO]Saving the graph and weights...')\n",
+        "    save_graph(sess, tf.get_default_graph(), env_name + '_graph.pb')\n",
+        "    print ('[INFO]Saved Successfully!!')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "o8tnkVtkL7KU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Load the graph\n",
+        "model_file = './CartPole-v0_graph.pb'\n",
+        "\n",
+        "def load_graph(model_file):\n",
+        "    print ('[INFO]Loading Model...')\n",
+        "    graph = tf.Graph()\n",
+        "    graph_def = tf.GraphDef()\n",
+        "    \n",
+        "    print ('[INFO]Reading model file...')\n",
+        "    with open(model_file, 'rb') as f:\n",
+        "        graph_def.ParseFromString(f.read())\n",
+        "\n",
+        "    with graph.as_default():\n",
+        "        tf.import_graph_def(graph_def)\n",
+        "    \n",
+        "    print ('[INFO]Model Loaded Successfully!!')\n",
+        "    return graph\n",
+        "\n",
+        "graph = load_graph(model_file)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "aVfyM9s7NGkb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "99db5720-d089-4fae-bf87-de275a836c05"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Test the network\n",
+        "\n",
+        "input_layer = 'import/input'\n",
+        "output_layer = 'import/output'\n",
+        "\n",
+        "input_op = graph.get_operation_by_name(input_layer)\n",
+        "output_op = graph.get_operation_by_name(output_layer)\n",
+        "\n",
+        "\n",
+        "with tf.Session(graph=graph) as sess:\n",
+        "    init = tf.global_variables_initializer()\n",
+        "    sess.run(init)\n",
+        "    \n",
+        "    obs = env.reset()\n",
+        "    done = False\n",
+        "    ep_rews = 0\n",
+        "    \n",
+        "    while not done:\n",
+        "        act = sess.run([output_op.outputs[0]], feed_dict={input_op.outputs[0]: obs.reshape(1, -1)})\n",
+        "        \n",
+        "        obs, rewards, done, info = env.step(act[0][0])\n",
+        "        \n",
+        "        ep_rews += rewards\n",
+        "        \n",
+        "    print ('Test Episode Rewards: {}'.format(ep_rews))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Episode Rewards: 200.0\n"
           ],
           "name": "stdout"
         }
